--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
-    "react-accessible-accordion": "^5.0.0",
-    "react-dom": "^18.2.0",
-    "react-select": "^5.8.0",
-    "react-select-async-paginate": "^0.7.3"
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
